--- a/HiveGameClient/HiveGameWPFApp/Views/MainMenu.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/MainMenu.xaml
@@ -8,13 +8,13 @@
         mc:Ignorable="d"
         d:DesignHeight="720" d:DesignWidth="1280">
     <DockPanel>
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Width="1297">
-            <Grid>
-                <Border>
-                    <Border.Background>
-                        <ImageBrush ImageSource="/Images/Background/MainMenuBackground.png" Stretch="UniformToFill" />
-                    </Border.Background>
-                    <Image x:Name="img_BottonFrame"  
+
+        <Grid>
+            <Border>
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/Background/MainMenuBackground.png" Stretch="UniformToFill" />
+                </Border.Background>
+                <Image x:Name="img_BottonFrame"  
                        Source="/Images/Background/BottonFrame.png"
                        Width="405" Height="486"
                        HorizontalAlignment="Left"
@@ -23,21 +23,21 @@
                        RenderTransformOrigin="0.5,0.5"
                        Panel.ZIndex="1"/>
 
-                </Border>
+            </Border>
 
-                <Grid>
-                    <Border Name ="brd_ImageProfile" Width="92" Height="121" BorderBrush="#FFC300" BorderThickness="2"
+            <Grid>
+                <Border Name ="brd_ImageProfile" Width="92" Height="121" BorderBrush="#FFC300" BorderThickness="2"
                         HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1042,20,0,0">
-                        <Grid>
-                            <Viewbox>
-                                <Image x:Name="img_ProfilePic" Source="/Images/Avatars/Avatar1.png" Stretch="Uniform"/>
-                            </Viewbox>
-                        </Grid>
-                    </Border>
-                    <StackPanel Margin="520,169,-15,88">
-                        <Canvas x:Name="videoCanvas" Width="774" Height="458" />
-                    </StackPanel>
-                    <Button x:Name="btn_Play" Content="{x:Static p:Resources.btn_Play}"
+                    <Grid>
+                        <Viewbox>
+                            <Image x:Name="img_ProfilePic" Source="/Images/Avatars/Avatar1.png" Stretch="Uniform"/>
+                        </Viewbox>
+                    </Grid>
+                </Border>
+                <StackPanel Margin="520,169,-15,88">
+                    <Canvas x:Name="videoCanvas" Width="774" Height="458" />
+                </StackPanel>
+                <Button x:Name="btn_Play" Content="{x:Static p:Resources.btn_Play}"
                         Width="324" Height="50" FontSize="30" FontFamily="Impact"
                         Foreground="Black"
                         HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -45,33 +45,33 @@
                         Padding="0,0,10,0"
                         Margin="108,215,0,0" RenderTransformOrigin="0.5,0.393"
                         Click="BtnPlay_Click">
-                        <Button.Background>
-                            <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                        </Button.Background>
-                    </Button>
+                    <Button.Background>
+                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                    </Button.Background>
+                </Button>
 
-                    <Button x:Name="btn_settings" 
+                <Button x:Name="btn_settings" 
                         Width="54" Height="41"
                         HorizontalAlignment="Left" VerticalAlignment="Top"
                         Cursor="Hand"
                         Margin="1173,32,0,0" RenderTransformOrigin="0.5,0.393"
                         Click="BtnSettings_Click">
-                        <Button.Template>
-                            <ControlTemplate TargetType="Button">
-                                <Border CornerRadius="10" BorderThickness="0">
-                                    <Border.Background>
-                                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                                    </Border.Background>
-                                    <StackPanel Orientation="Horizontal"  Width="43">
-                                        <Image Source="/Images/Icons/SettingsIcon.png" Width="43" Height="40"/>
-                                    </StackPanel>
-                                </Border>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="10" BorderThickness="0">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                                </Border.Background>
+                                <StackPanel Orientation="Horizontal"  Width="43">
+                                    <Image Source="/Images/Icons/SettingsIcon.png" Width="43" Height="40"/>
+                                </StackPanel>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
 
 
-                    <Image x:Name="img_PlayButton"  
+                <Image x:Name="img_PlayButton"  
                            Source="/Images/Icons/PlayButtonIcon.png"
                            Width="91" Height="55"
                            HorizontalAlignment="Left"
@@ -79,7 +79,15 @@
                            Margin="123,215,0,0"
                            RenderTransformOrigin="0.5,0.5"
                            Panel.ZIndex="1"/>
-                    <Image x:Name="img_FriensIcon"  
+                <Image x:Name="img_Statistics"  
+                       Source="/Images/Icons/StatisticsIcon.png"
+                       Width="106" Height="70"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Top"
+                       Margin="113,440,0,0"
+                       RenderTransformOrigin="0.5,0.5"
+                       Panel.ZIndex="1"/>
+                <Image x:Name="img_FriensIcon"  
                        Source="/Images/Icons/FriensIcon.png"
                        Width="58" Height="52"
                        HorizontalAlignment="Left"
@@ -87,7 +95,7 @@
                        Margin="122,366,0,0"
                        RenderTransformOrigin="0.5,0.5"
                        Panel.ZIndex="1"/>
-                    <Image x:Name="img_MyAccountIcon"  
+                <Image x:Name="img_MyAccountIcon"  
                        Source="/Images/Icons/MyAccountIcon.png"
                        Width="64" Height="54"
                        HorizontalAlignment="Left"
@@ -96,7 +104,7 @@
                        RenderTransformOrigin="0.5,0.5"
                        Panel.ZIndex="1"/>
 
-                    <Button x:Name="btn_MyAccount" Content="{x:Static p:Resources.btn_MyAccount}"
+                <Button x:Name="btn_MyAccount" Content="{x:Static p:Resources.btn_MyAccount}"
                          Width="324" Height="50" FontSize="30" FontFamily="Impact"
                          Foreground="Black"
                          HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -104,12 +112,12 @@
                          Padding="0,0,10,0"
                         Margin="108,290,0,0" RenderTransformOrigin="0.5,0.393"
                          Click="BtnMyAccount_Click">
-                        <Button.Background>
-                            <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                        </Button.Background>
-                    </Button>
+                    <Button.Background>
+                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                    </Button.Background>
+                </Button>
 
-                    <Image x:Name="img_Pet"  
+                <Image x:Name="img_Pet"  
                        Source="/Images/Icons/Code Swarm.png"
                        Width="296" Height="58"
                        HorizontalAlignment="Left"
@@ -118,7 +126,7 @@
                        RenderTransformOrigin="0.5,0.5"
                        Panel.ZIndex="1"/>
 
-                    <Image x:Name="img_VideoFrame"  
+                <Image x:Name="img_VideoFrame"  
                        Source="/Images/Background/VideoFrame.png"
                        Width="760" Height="464"
                        HorizontalAlignment="Left"
@@ -129,11 +137,12 @@
 
 
 
-                    <Image Name="img_GoOut" Source="/Images/Icons/Go out.png" 
+                <Image Name="img_GoOut" Source="/Images/Icons/Go out.png" 
                        Width="84" Height="85" 
                        MouseDown="Image_MouseDown" 
                        Cursor="Hand" Margin="10,10,1186,626" RenderTransformOrigin="0.5,0.506"/>
-                    <Button x:Name="btn_Friends" Content="{x:Static p:Resources.btn_Friend}"
+
+                <Button x:Name="btn_Friends" Content="{x:Static p:Resources.btn_Friend}"
                         Width="324" Height="50" FontSize="30" FontFamily="Impact"
                         Foreground="Black"
                         HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -141,11 +150,24 @@
                         Padding="0,0,10,0"
                         Margin="108,367,0,0" RenderTransformOrigin="0.5,0.393"
                         Click="BtnFriends_Click">
-                        <Button.Background>
-                            <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                        </Button.Background>
-                    </Button>
-                    <Label Name="lbl_Username" Content="{x:Static p:Resources.globalLbl_UserName}"
+                    <Button.Background>
+                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                    </Button.Background>
+                </Button>
+
+                <Button x:Name="btn_Statistics" Content="Statistics"
+                            Width="324" Height="50" FontSize="30" FontFamily="Impact"
+                            Foreground="Black"
+                            HorizontalAlignment="Left" VerticalAlignment="Top"
+                            HorizontalContentAlignment="Right" 
+                            Padding="0,0,10,0"
+                            Margin="107,448,0,0" RenderTransformOrigin="0.5,0.393"
+                            Click="BtnStatistics_Click">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                    </Button.Background>
+                </Button>
+                <Label Name="lbl_Username" Content="{x:Static p:Resources.globalLbl_UserName}"
                            HorizontalAlignment="Left" 
                            VerticalAlignment="Top"
                            HorizontalContentAlignment="Right"
@@ -156,8 +178,8 @@
                            FontFamily="Impact"
                            />
 
-                </Grid>
-                <Button x:Name="btn_EditProfile" Content="{x:Static p:Resources.btn_EditProfile}"
+            </Grid>
+            <Button x:Name="btn_EditProfile" Content="{x:Static p:Resources.btn_EditProfile}"
                     Width="324" Height="50" FontSize="30" FontFamily="Impact" Visibility="Collapsed"
                     Foreground="Black"
                     HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -165,12 +187,12 @@
                     Padding="0,0,10,0"
                     Margin="777,327,0,0" RenderTransformOrigin="0.5,0.393"
                     Click="BtnEditProfile_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                    </Button.Background>
-                </Button>
+                <Button.Background>
+                    <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                </Button.Background>
+            </Button>
 
-                <Button x:Name="btn_EditCredentials" Content="{x:Static p:Resources.btn_EditCredentials}"
+            <Button x:Name="btn_EditCredentials" Content="{x:Static p:Resources.btn_EditCredentials}"
                     Width="324" Height="50" FontSize="30" FontFamily="Impact" Visibility="Collapsed"
                     Foreground="Black"
                     HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -178,12 +200,12 @@
                     Padding="0,0,10,0"
                     Margin="777,431,0,0" RenderTransformOrigin="0.5,0.393"
                     Click="BtnEditCredentials_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                    </Button.Background>
-                </Button>
+                <Button.Background>
+                    <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                </Button.Background>
+            </Button>
 
-                <Image x:Name="img_CreateMatch"  Visibility="Collapsed"
+            <Image x:Name="img_CreateMatch"  Visibility="Collapsed"
                    Source="/Images/Icons/CreateMatch.png"
                    Width="194" Height="196"
                    HorizontalAlignment="Left"
@@ -192,7 +214,7 @@
                    RenderTransformOrigin="0.5,0.5"
                    Panel.ZIndex="1"/>
 
-                <Button x:Name="btn_CreateMatch" Content="{x:Static p:Resources.btn_CreateMatch}"
+            <Button x:Name="btn_CreateMatch" Content="{x:Static p:Resources.btn_CreateMatch}"
                     Width="254" Height="50" FontSize="30" FontFamily="Impact" Visibility="Collapsed"
                     Foreground="Black"
                     HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -200,12 +222,12 @@
                     Padding="0,0,10,0"
                     Margin="952,460,0,0" RenderTransformOrigin="0.5,0.393"
                     Click="BtnCreateMatch_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                    </Button.Background>
-                </Button>
+                <Button.Background>
+                    <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                </Button.Background>
+            </Button>
 
-                <Image x:Name="img_JoinMatch"  Visibility="Collapsed"
+            <Image x:Name="img_JoinMatch"  Visibility="Collapsed"
                    Source="/Images/Icons/JoinMatch.png"
                    Width="194" Height="196"
                    HorizontalAlignment="Left"
@@ -214,7 +236,7 @@
                    RenderTransformOrigin="0.5,0.5"
                    Panel.ZIndex="1"/>
 
-                <Button x:Name="btn_JoinMatch" Content="{x:Static p:Resources.btn_JoinMatch}"
+            <Button x:Name="btn_JoinMatch" Content="{x:Static p:Resources.btn_JoinMatch}"
                     Width="254" Height="50" FontSize="30" FontFamily="Impact" Visibility="Collapsed"
                     Foreground="Black"
                     HorizontalAlignment="Left" VerticalAlignment="Top"
@@ -222,11 +244,12 @@
                     Padding="0,0,10,0"
                     Margin="616,460,0,0" RenderTransformOrigin="0.5,0.393"
                     Click="BtnJoinMatch_Click">
-                    <Button.Background>
-                        <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
-                    </Button.Background>
-                </Button>
-            </Grid>
-        </ScrollViewer>
+                <Button.Background>
+                    <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                </Button.Background>
+            </Button>
+
+
+        </Grid>
     </DockPanel>
 </Page>
