--- a/HiveGameClient/HiveGameWPFApp/Views/EditProfileView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/EditProfileView.xaml
@@ -34,7 +34,7 @@
                         </Button.Background>
                     </Button>
 
-                    <Label x:Name="lbl_editProfile" Content="{x:Static p:Resources.lbl_EditProfile}"
+                    <Label x:Name="lbl_EditProfile" Content="{x:Static p:Resources.lbl_EditProfile}"
                         Foreground="#e6a500"
                         FontFamily="Impact"
                         FontSize="60"
