--- a/HiveGameClient/HiveGameWPFApp/Views/LobbyView.xaml
+++ b/HiveGameClient/HiveGameWPFApp/Views/LobbyView.xaml
@@ -22,27 +22,48 @@
                RenderTransformOrigin="0.5,0.506" />
 
             <Grid>
+                <Label x:Name="lbl_Code" Content="GAME CODE"
+                     Foreground="#e6a500"
+                     Background="Black"
+                     FontFamily="Impact"
+                     FontSize="25"
+                     HorizontalAlignment="Left" 
+                     Margin="14,158,0,0" 
+                     VerticalAlignment="Top"/>
+
+                <Label x:Name="lbl_GameCode"
+                       Width="201" Height="54"
+                       HorizontalAlignment="Left" VerticalAlignment="Top"
+                       FontFamily="Impact" Margin="145,151,0,0"
+                       Background="#1C1C1C" Foreground="White"
+                       BorderBrush="#FFC300" BorderThickness="3"
+                       Padding="5" FontSize="33"
+                       HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                    <Label.Effect>
+                        <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
+                    </Label.Effect>
+                </Label>
 
                 <Image x:Name="img_Lobby"  
                        Source="/Images/Icons/Lobby.png"
                        Width="242" Height="86"
-                       HorizontalAlignment="Left"
+                       HorizontalAlignment="Center"
                        VerticalAlignment="Top"
-                       Margin="182,68,0,0"
+                       Margin="0,32,0,0"
                        RenderTransformOrigin="0.5,0.5"
                        Panel.ZIndex="1"/>
 
 
                 <ScrollViewer VerticalScrollBarVisibility="Auto" 
                               Background="#66FFFFFF" 
-                              Margin="658,96,142,180">
+                              Margin="762,151,38,141">
                     <StackPanel x:Name="ChatMessagesPanel">
-                        
+
                     </StackPanel>
                 </ScrollViewer>
 
 
-                <StackPanel VerticalAlignment="Bottom" Background="Black" Height="84" Margin="658,0,142,96" Orientation="Horizontal">
+                <StackPanel VerticalAlignment="Bottom" Background="Black" Height="86" Margin="762,0,38,55" Orientation="Horizontal">
 
                     <TextBox x:Name="txtb_MessageInput" Height="40"
                          Background="#2F2F2F"
@@ -63,13 +84,15 @@
 
                     <Button Name="btn_Send" Content="{x:Static p:Resources.btn_Send}"
                         Width="90" Height="40"
-                        Background="#FFD700"
                         Foreground="Black"
                         FontWeight="Bold"
                         FontSize="20"
                         Margin="10,0,0,0"
                         VerticalAlignment="Center"
                         Click="BtnSendMessage_Click">
+                        <Button.Background>
+                            <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                        </Button.Background>
                         <Button.Effect>
                             <DropShadowEffect Color="Black" ShadowDepth="3" Opacity="0.5" BlurRadius="10"/>
                         </Button.Effect>
@@ -84,6 +107,102 @@
                                VerticalAlignment="Center"/>
                 </StackPanel>
             </Grid>
+
+            <Button x:Name="btn_SendOffPlayer" Content="Send off player"
+                 Width="141" Height="37" FontSize="20" FontFamily="Impact"
+                 Foreground="Black"
+                 HorizontalAlignment="Left" VerticalAlignment="Top"
+                 HorizontalContentAlignment="Right" 
+                 Padding="0,0,10,0"
+                Margin="495,613,0,0" RenderTransformOrigin="0.5,0.393"
+                 Click="BtnMyAccount_Click">
+                <Button.Background>
+                    <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                </Button.Background>
+            </Button>
+
+            <Border x:Name="brd_Host" Background="#2A2A2A" CornerRadius="10" Margin="475,151,0,369"
+                        BorderBrush="#FFC300" BorderThickness="3"
+                        Width="177" HorizontalAlignment="Left">
+                <StackPanel Margin="10">
+                    <TextBlock Text="Host" FontFamily="Impact" FontSize="25" 
+                                   Foreground="#FFC300" HorizontalAlignment="Center"/>
+                    <Image Source="/Images/Avatars/Avatar1.png" Width="80" Height="80" 
+                               Margin="10" HorizontalAlignment="Center"/>
+                    <TextBlock Text="Host Name" FontSize="20" Foreground="White" 
+                                   HorizontalAlignment="Center"/>
+                </StackPanel>
+            </Border>
+
+            <Border x:Name="brd_Guest" Background="#2A2A2A" CornerRadius="10" Margin="0,400,628,120"
+                        BorderBrush="#FFC300" BorderThickness="3"
+                        Width="177" HorizontalAlignment="Right">
+                <StackPanel Margin="10">
+                    <TextBlock Text="Guest" FontFamily="Impact" FontSize="25" 
+                                   Foreground="#FFC300" HorizontalAlignment="Center"/>
+                    <Image Source="/Images/Avatars/Avatar2.png" Width="80" Height="80" 
+                               Margin="10" HorizontalAlignment="Center"/>
+                    <TextBlock Text="Guest Name" FontSize="20" Foreground="White" 
+                                   HorizontalAlignment="Center"/>
+                </StackPanel>
+            </Border>
+
+            <Border Background="#333333" CornerRadius="10" Margin="23,257,932,54" 
+                        BorderBrush="#FFC300" BorderThickness="3">
+                <Grid Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" >
+                        <StackPanel.Background>
+                            <ImageBrush ImageSource="/Images/Icons/ButtonsIcon.png" Stretch="Fill"/>
+                        </StackPanel.Background>
+                        <TextBlock Text="Friends" FontFamily="Impact" FontSize="30" Foreground="Black" Width="167" TextAlignment="Right"/>
+                        <Button Width="35" Height="35" Margin="10,0,0,0"
+                                    Background="Transparent" BorderThickness="0">
+                            <Image Source="/Images/Icons/FriensIcon.png" Stretch="Uniform" Width="30" Height="31"/>
+                        </Button>
+                    </StackPanel>
+
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,10,0,10">
+                        <TextBox x:Name="txt_SearchFriend" Width="200" Height="30"
+                                     Background="#1C1C1C" Foreground="White" 
+                                     BorderBrush="#FFC300" BorderThickness="2"
+                                     FontSize="16" VerticalContentAlignment="Center" />
+                        <Button x:Name="btn_SearchFriens" Width="30" Height="30" Margin="5,0,0,0"
+                                    Background="Transparent" BorderThickness="0">
+                            <Image Source="/Images/Icons/SearchIcon2.jpg" Stretch="Uniform"/>
+                        </Button>
+                        <Button x:Name="btn_RefreshList" Width="30" Height="30" Margin="5,0,0,0"
+                                    Background="Transparent" BorderThickness="0">
+                            <Image Source="/Images/Icons/RefreshIcon2.png" Stretch="Uniform"/>
+                        </Button>
+                    </StackPanel>
+                    <ListBox x:Name="FriendsList" Grid.Row="2" Background="#1C1C1C" 
+                                 BorderThickness="0" Foreground="White">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Border Background="#2A2A2A" CornerRadius="5" Margin="0,5,0,5">
+                                    <StackPanel Orientation="Horizontal" Margin="10">
+                                        <Image Source="/Assets/friend_profile.png" 
+                                                   Width="40" Height="40" Margin="5"/>
+                                        <TextBlock Text="{Binding FriendName}" FontSize="18"
+                                                       VerticalAlignment="Center" Margin="10,0,0,0"/>
+                                        <Button Width="30" Height="30" Margin="Auto,0,0,0"
+                                                    Background="Transparent" BorderThickness="0"
+                                                    Click="BtnAddFriend_Click">
+                                            <Image Source="/Assets/add_icon.png" Stretch="Uniform"/>
+                                        </Button>
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Grid>
+            </Border>
         </Grid>
     </DockPanel>
 </Page>
